Item113: more css classes
git-svn-id: http://svn.foswiki.org/trunk@1178 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/HistoryPlugin/templates/oopshistory.tmpl
+++ b/HistoryPlugin/templates/oopshistory.tmpl
@@ -87,7 +87,7 @@ Render style: <select name="render">
 <option>10</option>
 <option>20</option>
 <option>50</option>
-</select> %MAKETEXT{"revisions up to"}% <input type="text" class="twikiInputField" name="rev2" value="%HISTORY_REV2%" size="2" />&nbsp;<input type="submit" class="twikiButton" value="%MAKETEXT{"Refresh"}%" />
+</select> %MAKETEXT{"revisions up to"}% <input type="text" class="twikiInputField" name="rev2" value="%HISTORY_REV2%" size="2" />&nbsp;<input type="submit" class="foswikiButton" value="%MAKETEXT{"Refresh"}%" />
 <input type="hidden" name="template" value="oopshistory" />
 </form>
 %TMPL:END%
