--- a/PatternSkin/pub/System/PatternSkin/print.css
+++ b/PatternSkin/pub/System/PatternSkin/print.css
@@ -124,7 +124,7 @@
 		text-decoration:none;
 	}
 	:visited,
-	.patternTopic a:visited {
+	.foswikiTopic a:visited {
 		color:#06c;
 		background-color:transparent;
 	}
