--- a/PatternSkin/templates/attachagain.pattern.tmpl
+++ b/PatternSkin/templates/attachagain.pattern.tmpl
@@ -13,7 +13,7 @@
 
 
 
-%TMPL:DEF{"changepropertiesaction"}%<div class="twikiFormStep twikiLast"><input type="submit" class="twikiButton" name="changeproperties" value='%MAKETEXT{"Change comment and properties only"}%' /></div><!-- /twikiFormStep-->%TMPL:END%
+%TMPL:DEF{"changepropertiesaction"}%<div class="twikiFormStep twikiLast"><input type="submit" class="foswikiButton" name="changeproperties" value='%MAKETEXT{"Change comment and properties only"}%' /></div><!-- /twikiFormStep-->%TMPL:END%
 
 
 
