--- a/PatternSkin/templates/foswiki.pattern.tmpl
+++ b/PatternSkin/templates/foswiki.pattern.tmpl
@@ -14,7 +14,7 @@
 
 %TMPL:DEF{"pagetitlestylewrapper"}%<h1 class="patternTemplateTitle">%TMPL:P{"pagetitle"}%</h1>%TMPL:END%
 
-%TMPL:DEF{"patterntopiccontents"}%<div class="patternTopic">%TMPL:P{"pagetitlestylewrapper"}% %TMPL:P{"content"}%</div><!-- /patternTopic-->%TMPL:END%
+%TMPL:DEF{"patterntopiccontents"}%<div class="foswikiTopic">%TMPL:P{"pagetitlestylewrapper"}% %TMPL:P{"content"}%</div><!-- /foswikiTopic-->%TMPL:END%
 
 %TMPL:DEF{"printaction"}%%TMPL:END%
 
