--- a/PatternSkin/templates/renamebase.pattern.tmpl
+++ b/PatternSkin/templates/renamebase.pattern.tmpl
@@ -30,7 +30,7 @@ hideimgleft="%ICONURLPATH{toggleclose}%"}%</div><!--//patternTop-->%TMPL:END%
 
 
 %TMPL:DEF{"checkuncheck"}%<div class="twikiMakeVisibleBlock"><hr />
-<p><input type="button" class="twikiButton" value='%MAKETEXT{"Select all"}%' onclick="checkAll(document.rename,true);" />&nbsp;<input type="button" class="twikiButton" value='%MAKETEXT{"Clear all"}%' onclick="checkAll(document.rename,false);" /> %MAKETEXT{"checkboxes of referenced topics"}%</p></div>%TMPL:END%
+<p><input type="button" class="foswikiButton" value='%MAKETEXT{"Select all"}%' onclick="checkAll(document.rename,true);" />&nbsp;<input type="button" class="foswikiButton" value='%MAKETEXT{"Clear all"}%' onclick="checkAll(document.rename,false);" /> %MAKETEXT{"checkboxes of referenced topics"}%</p></div>%TMPL:END%
 
 
 %TMPL:DEF{"content"}%%TMPL:P{"toolbar"}%
