--- a/PatternSkin/templates/viewprint.pattern.tmpl
+++ b/PatternSkin/templates/viewprint.pattern.tmpl
@@ -29,7 +29,7 @@
 
 %TMPL:DEF{"broadcastmessage"}%%TMPL:END%
 
-%TMPL:DEF{"content"}%<div class="patternTopic">%TMPL:P{"broadcastmessage"}% %TEXT%</div><!-- /patternTopic-->%TMPL:END%
+%TMPL:DEF{"content"}%<div class="foswikiTopic">%TMPL:P{"broadcastmessage"}% %TEXT%</div><!-- /foswikiTopic-->%TMPL:END%
 
 %TMPL:DEF{"patterntopiccontents"}%
 %TMPL:P{"contentheader"}%%TMPL:P{"formtop"}%%TMPL:P{"attachmentstop"}%<div class="patternContent">%TMPL:P{"content"}%
