--- a/core/templates/addform.tmpl
+++ b/core/templates/addform.tmpl
@@ -1,1 +1,1 @@
-%{ This is a default template }%<div class="twikiChangeFormButtonHolder"><input class="twikiButton" type="submit" name="action_addform" value="%MAKETEXT{"Add form"}%" /></div><br class="twikiClear" />
+%{ This is a default template }%<div class="twikiChangeFormButtonHolder"><input class="foswikiButton" type="submit" name="action_addform" value="%MAKETEXT{"Add form"}%" /></div><br class="twikiClear" />
