--- a/core/templates/foswiki.tmpl
+++ b/core/templates/foswiki.tmpl
@@ -85,10 +85,10 @@
 %TMPL:DEF{"topicinfo"}%<div style="background:%WEBBGCOLOR%">
 %TMPL:P{"topicaction"}%</div>%TMPL:END%
 
-%TMPL:DEF{"main"}%<div class="twikiMiddleContainer"><div class="twikiMain">
+%TMPL:DEF{"main"}%<div class="twikiMain">
 %TMPL:P{"simpleheader"}%
 %TMPL:P{"pagetitlestylewrapper"}%%TMPL:P{"contentwrapper"}%
-%TMPL:P{"standardfooter"}%</div></div>%TMPL:END%
+%TMPL:P{"standardfooter"}%</div>%TMPL:END%
 
 %{ container displayed just above the topic text: }%
 %TMPL:DEF{"contentheader"}%%TMPL:END%
