--- a/PatternSkin/pub/System/PatternSkinCssCookbookEditTableStyle/edittable.css
+++ b/PatternSkin/pub/System/PatternSkinCssCookbookEditTableStyle/edittable.css
@@ -1,10 +1,10 @@
 
 /* 1 */
-.patternTopic .editTableInput,
-.patternTopic .editTableTextarea {
+.foswikiTopic .editTableInput,
+.foswikiTopic .editTableTextarea {
 	font-family:arial, "Lucida Grande", verdana, sans-serif;
 }
 /* 2 */
-.patternTopic .editTable .twikiTable td {
+.foswikiTopic .editTable .twikiTable td {
 	vertical-align:top;
 }
