--- a/PatternSkin/pub/System/PatternSkinCssCookbookFonts/fonts.css
+++ b/PatternSkin/pub/System/PatternSkinCssCookbookFonts/fonts.css
@@ -5,7 +5,7 @@
 h1, h2, h3, h4, h5, h6 {
 	font-family: "times", serif;
 }
-.patternTopic {
+.foswikiTopic {
 	background-color:#E2D7B9;
 	border:3px double #555;
 	padding:.5em;
