--- a/PatternSkin/templates/preview.pattern.tmpl
+++ b/PatternSkin/templates/preview.pattern.tmpl
@@ -9,7 +9,7 @@
 
 %TMPL:DEF{"action_buttons"}%%TMPL:P{"button_save"}%&nbsp;%TMPL:P{"button_quietsave"}%&nbsp;%TMPL:P{"button_checkpoint"}% %MAKETEXT{"or"}% %TMPL:P{"button_discard"}%%TMPL:END%
 
-%TMPL:DEF{"button_discard"}%<input id="discard" type="submit" class="twikiButton twikiButtonCancel" name="action_cancel" %MAKETEXT{"value='Discard' accesskey='d'"}% />%TMPL:END%
+%TMPL:DEF{"button_discard"}%<input id="discard" type="submit" class="foswikiButton twikiButtonCancel" name="action_cancel" %MAKETEXT{"value='Discard' accesskey='d'"}% />%TMPL:END%
 
 %TMPL:DEF{"accesskeys_help"}%%ICON{info}% <a class="twikiPopUp" target="AccessKeys" href="%SCRIPTURL{"view"}%/%SYSTEMWEB%/AccessKeys">%MAKETEXT{"Access keys"}%</a>: %MAKETEXT{"S = Save, Q = Quiet save, K = Save and Continue, D = Discard"}%%TMPL:END%
 
@@ -18,9 +18,9 @@
 %TMPL:P{"formstart"}%
 <div class="twikiPreviewArea">
 <div class="patternContent">
-<div class="patternTopic">
+<div class="foswikiTopic">
 %TEXT%
-</div><!--/patternTopic-->
+</div><!--/foswikiTopic-->
 %META{"form"}%
 </div><!--/patternContent-->
 </div><!--/twikiPreviewArea-->
