--- a/core/templates/form.tmpl
+++ b/core/templates/form.tmpl
@@ -1,4 +1,4 @@
-%{ This is a default template }%%TMPL:DEF{"changeform"}%<input type="submit" name="action_replaceform" value='%MAKETEXT{"Replace form..."}%' class="twikiChangeFormButton twikiButton" />%TMPL:END%
+%{ This is a default template }%%TMPL:DEF{"changeform"}%<input type="submit" name="action_replaceform" value='%MAKETEXT{"Replace form..."}%' class="twikiChangeFormButton foswikiButton" />%TMPL:END%
 
 %TMPL:DEF{"mandatory"}%<span class="foswikiAlert">*</span> %MAKETEXT{"indicates mandatory fields"}% %TMPL:END%
 
