--- a/core/templates/oopsleaseconflict.tmpl
+++ b/core/templates/oopsleaseconflict.tmpl
@@ -14,7 +14,7 @@
 %QUERYPARAMS{format="<input type='hidden' name='$name' value='$value' />" encoding="entity"}%
 </literal>
 %MAKETEXT{"To see if [_1] has finished editing yet, click " args="%PARAM1%"}%
-<input type="submit" class="twikiButton" value='%MAKETEXT{"Try Again"}%' />
+<input type="submit" class="foswikiButton" value='%MAKETEXT{"Try Again"}%' />
 </form>
 <form action="%SCRIPTURLPATH{"%PARAM4%"}%/%WEB%/%TOPIC%" method="post">
 %MAKETEXT{"To edit the topic anyway, click "}%
@@ -22,7 +22,7 @@
 <literal>
 %QUERYPARAMS{format="<input type='hidden' name='$name' value='$value' />" encoding="entity"}%
 </literal>
-<input type="submit" class="twikiButton" value='%MAKETEXT{"Edit Anyway"}%' />
+<input type="submit" class="foswikiButton" value='%MAKETEXT{"Edit Anyway"}%' />
 </form>%TMPL:END%
 
 %TMPL:DEF{"topicactionbuttons"}%[[%WEB%.%TOPIC%][%MAKETEXT{"View topic"}%]] %TMPL:P{"sep"}% <a href="%SCRIPTURLPATH{"view"}%/%WEB%/%TOPIC%?raw=on">%MAKETEXT{"View raw text without formatting"}%</a>%TMPL:END%
