--- a/PatternSkin/templates/viewsidebar.pattern.tmpl
+++ b/PatternSkin/templates/viewsidebar.pattern.tmpl
@@ -13,8 +13,9 @@
    * [[%BASEWEB%/%HOMETOPIC%][%BASEWEB%]]
 </div><!--/patternWebIndicator-->%TMPL:END%
 
-
-%TMPL:DEF{"websidebar"}%%TMPL:P{"sidebar:weblink"}%%IF{"istopic 'WebLeftBar'" then="$percntINCLUDE{$quot%WEB%.WebLeftBar$quot}$percnt" else="$percntINCLUDE{$quot%WEB%.WebLeftBarExample$quot}$percnt"}%
+%{ Please note that there must be a new line before the include of the WebLeftBar. Other wise the first bullet will not be displayed as a bullet. You do not see this in the default left bars because there is a login link. But when you remove this and replace by normal bullet the problem comes. See Foswiki task Item410. This bug has been fixed 5 or 6 times now which is the reason for this long comment %}
+%TMPL:DEF{"websidebar"}%%TMPL:P{"sidebar:weblink"}%
+%IF{"istopic 'WebLeftBar'" then="$percntINCLUDE{$quot%WEB%.WebLeftBar$quot}$percnt" else="$percntINCLUDE{$quot%WEB%.WebLeftBarExample$quot}$percnt"}%
 %TMPL:END%
 
 
