--- a/PatternSkin/templates/settings.pattern.tmpl
+++ b/PatternSkin/templates/settings.pattern.tmpl
@@ -19,7 +19,7 @@ foswiki.Event.addLoadEvent(initForm);
 %TMPL:DEF{"saveoptions"}%%TMPL:END%
 %TMPL:DEF{"sig"}%%TMPL:END%
 
-%TMPL:DEF{"action_buttons"}%%TMPL:P{"button_save"}% %MAKETEXT{"or"}% %TMPL:P{"canceltopicaction"}%%TMPL:END%
+%TMPL:DEF{"action_buttons"}%%TMPL:P{"button_save"}%&nbsp; %MAKETEXT{"or"}% %TMPL:P{"button_cancel"}%%TMPL:END%
 
 
 %TMPL:DEF{"accesskeys_help"}%%ICON{info}% <a class="foswikiPopUp" target="AccessKeys" href="%SCRIPTURL{"view"}%/%SYSTEMWEB%/AccessKeys">%MAKETEXT{"Access keys"}%</a>: %MAKETEXT{"S = Save, C = Cancel"}%%TMPL:END%
