--- a/PatternSkin/pub/System/PatternSkin/colors.css
+++ b/PatternSkin/pub/System/PatternSkin/colors.css
@@ -293,8 +293,7 @@ table.foswikiFormTable td.foswikiFormTableRow {
    background-color:#eef7fa;
    border-color:#fff;
 }
-.foswikiAttachments .foswikiButton h3,
-.foswikiForm .foswikiButton h3 {
+.patternTwistyButton h3 {
 	color:#d1400e;
 }
 .foswikiAttachments table,
@@ -339,7 +338,10 @@ table.foswikiFormTable th.foswikiFormTableHRow font {
 }
 .foswikiBroadcastMessage,
 .foswikiNotification {
-   background-color:#ffe67b;
+   background-color:#fff0c4;
+}
+.foswikiNotification {
+   border:2px solid #ffdf4c;
 }
 #foswikiLogin .patternLoginNotification {
    background-color:#fff;
@@ -460,7 +462,8 @@ a:hover .foswikiAccessKey {
 .patternActionButtons a:hover {
    color:#fff;
 }
-.patternTopicAction .foswikiAccessKey {
+.patternTopicAction a:link .foswikiAccessKey,
+.patternTopicAction a:visited .foswikiAccessKey {
    color:#fff;
    border-color:#fff;
 }
@@ -779,8 +782,7 @@ a.foswikiButton:active {
 .patternButtonShrink:active {
    background-position:16px -84px;
 }
-.foswikiBroadcastMessage,
-.foswikiNotification {
+.foswikiBroadcastMessage {
    background-image:url(background_alert.gif);
    background-repeat:repeat-x;
 }
