--- a/PatternSkin/templates/login.pattern.tmpl
+++ b/PatternSkin/templates/login.pattern.tmpl
@@ -2,7 +2,7 @@
 
 %TMPL:DEF{"bodyclassname"}%patternNoViewPage patternLoginPage%TMPL:END%
 
-%TMPL:DEF{"bottombar"}%%TMPL:END%
+%TMPL:DEF{"bottombarcontents"}%%TMPL:END%
 
 %TMPL:DEF{"form"}%<div id="foswikiLogin">
 <div class="foswikiFormSteps">%TMPL:P{"formstart"}%%TMPL:P{"titlestep"}%
