Item429: make Manage::createTopic understand web.topic notation
git-svn-id: http://svn.foswiki.org/trunk@1305 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/oopsmore.tmpl
+++ b/core/templates/oopsmore.tmpl
@@ -24,8 +24,9 @@
 %TMPL:P{"nonwikiword"}%
 <input type="hidden" name="action" value="create" />
 <input type="hidden" name="onlynewtopic" value="on" />
-<input type="hidden" name="templatetopic" value="%TOPIC%" />
+<input type="hidden" name="templatetopic" value="%WEB%.%TOPIC%" />
 <input type="hidden" name="nowysiwyg" value="1" />
+<input type="hidden" name="action_save" value="1" />
 </form>
 %TMPL:END%
 
