Item264: minor tweaks
git-svn-id: http://svn.foswiki.org/trunk@1307 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/PatternSkin/pub/System/PatternSkin/style.css
+++ b/PatternSkin/pub/System/PatternSkin/style.css
@@ -996,7 +996,7 @@ h4.patternSearchResultsHeader {
 	font-size:94%;
 }
 .patternEditPage .patternEditTopic {
-	margin:.25em 0 0 0;
+	margin:.25em 0 .5em 0;
 }
 .patternEditPage .foswikiForm {
 	margin:2.25em 0 0 0;
@@ -1025,7 +1025,6 @@ h4.patternSearchResultsHeader {
 }
 .patternSig {}
 .patternSigLine {
-	margin:.5em 0 0 0;
 	border-style:none;
 	height:1%; /* for IE */
 	float:right;
