--- a/PatternSkin/pub/System/PatternSkin/colors.css
+++ b/PatternSkin/pub/System/PatternSkin/colors.css
@@ -68,7 +68,7 @@ blockquote h2 {
    background:none;
 }
 h1 {
-   color:#3ba1cb;
+   color:#2989bb;
 }
 h2, h3, h4, h5, h6 {
    color:#d1400e;
@@ -122,7 +122,7 @@ h3, h4, h5, h6 {
    color:#fff;
 }
 #patternMainContents h1 a:link, #patternMainContents h1 a:visited {
-   color:#3ba1cb;
+   color:#2989bb;
 }
 #patternMainContents h2 a:link, #patternMainContents h2 a:visited,
 #patternMainContents h3 a:link, #patternMainContents h3 a:visited,
@@ -442,7 +442,7 @@ a:hover .foswikiAccessKey {
 }
 
 .patternTopicActions {
-   background-color:#3ba1cb;
+   background-color:#2989bb;
    color:#777;
 }
 .patternTopicAction {
