Item454: unify nofoswikiuser and notwikiuser to not_a_user
git-svn-id: http://svn.foswiki.org/trunk@1320 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/messages.tmpl
+++ b/core/templates/messages.tmpl
@@ -40,7 +40,7 @@
 ---+++ %MAKETEXT{"Unrecognized action command [_1]" args="%PARAM1%"}%
 %MAKETEXT{"Please go back in your browser and try again."}%
 %TMPL:END%
-%TMPL:DEF{"notwikiuser"}%
+%TMPL:DEF{"not_a_user"}%
 ---+++ %MAKETEXT{"Can't find user [_1]" args="%PARAM1%"}%
 %MAKETEXT{"Please make sure you spelled the [_1] correctly and try again. If you get stuck, please mail [_2]." args="%SYSTEMWEB%.LoginName, %WIKIWEBMASTER%"}%
 
