--- a/core/templates/foswiki.tmpl
+++ b/core/templates/foswiki.tmpl
@@ -67,7 +67,7 @@
 <div><div class="foswikiLeft"  style="padding-right:2em;"><noautolink><img src="%WEBLOGOIMG%" border="0" alt="%WEBLOGOALT%" /></noautolink></div>
 <div class="foswikiLeft"> %WEB%&nbsp; %TOPIC% %TMPL:P{"titleaction"}%</div><br class="foswikiClear" /> </div></div>%TMPL:P{"headerhelp"}%%TMPL:END%
 
-%TMPL:DEF{"copyright"}%<div class="twikiCopyright">%WEBCOPYRIGHT%</div>%TMPL:END%
+%TMPL:DEF{"copyright"}%<div class="foswikiCopyright">%WEBCOPYRIGHT%</div>%TMPL:END%
 
 %TMPL:DEF{"footernote"}%%TMPL:END%
 %TMPL:DEF{"content"}%%TMPL:END%
