--- a/core/templates/login.sudo.tmpl
+++ b/core/templates/login.sudo.tmpl
@@ -1,6 +1,6 @@
 %{ This is a default template }%%TMPL:INCLUDE{"login"}%
 
-%TMPL:DEF{"webaction"}%%MAKETEXT{"Admin TWiki User Authentication"}%%TMPL:END%
+%TMPL:DEF{"webaction"}%%MAKETEXT{"Admin Foswiki User Authentication"}%%TMPL:END%
 %TMPL:DEF{"LOGGED_IN_BANNER"}%%MAKETEXT{"[_1] is currently logged in" args="%USERSWEB%.%WIKINAME%"}%%TMPL:END%
 %TMPL:DEF{"UNRECOGNISED_USER"}%%MAKETEXT{"Unrecognised user and/or password"}%%TMPL:END%
 
