--- a/core/pub/System/SkinTemplates/default.css
+++ b/core/pub/System/SkinTemplates/default.css
@@ -77,7 +77,7 @@ blockquote {
 }
 
 /*	-----------------------------------------------------------
-	TWiki styles
+	Foswiki styles
 	-----------------------------------------------------------	*/
 
 .foswikiPage {
@@ -277,7 +277,7 @@ tr.foswikiDiffDebug .foswikiDiffAddedText {
 	background-color:#ccf; /* violet - do not change */
 }
 /* Unchanged */
-.twikiDiffUnchangedHeader,
+.foswikiDiffUnchangedHeader,
 tr.foswikiDiffDebug .foswikiDiffUnchangedText {
 	color:#8E9195;
 }
@@ -563,16 +563,16 @@ a:hover .foswikiAccessKey {
 	border-style:solid;
 }
 
-.twikiHierarchicalNavigation ul {
+.foswikiHierarchicalNavigation ul {
 	padding:0;
 	margin:0;
 	list-style:none;
 }
-.twikiHierarchicalNavigation .twikiCurrentTopic li {
+.foswikiHierarchicalNavigation .foswikiCurrentTopic li {
 	font-weight:bold;
 }
-.twikiHierarchicalNavigation .twikiParentTopic li {}
-.twikiHierarchicalNavigation .twikiChildTopics li {}
+.foswikiHierarchicalNavigation .foswikiParentTopic li {}
+.foswikiHierarchicalNavigation .foswikiChildTopics li {}
 
 
 /* WebSearch, WebSearchAdvanced */
@@ -604,7 +604,7 @@ tr.foswikiDiffDebug td {
 	border-width:1px;
 	border-style:solid;
 }
-.twikiCopyright {
+.foswikiCopyright {
 	margin:1em 0 0 0;
 }
 /* See also: System/CascadingStyleSheets */
