--- a/core/templates/mailresetpassword.tmpl
+++ b/core/templates/mailresetpassword.tmpl
@@ -1,6 +1,6 @@
 %{ This is a default template }%From: %WIKIWEBMASTERNAME% <%WIKIWEBMASTER%>
 To: %FIRSTLASTNAME% <%EMAILADDRESS%>
-Subject: %MAKETEXT{"TWiki password reset for [_1]" args="%WIKINAME%"}%
+Subject: %MAKETEXT{"Foswiki password reset for [_1]" args="%WIKINAME%"}%
 
 %MAKETEXT{"Dear [_1]" args="%WIKINAME%"}%
 
